apps/applications/home/wedding-share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-share
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wedding-share
  template:
    metadata:
      labels:
        app: wedding-share
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: wedding-share
          image: cirx08/wedding_share
          ports:
            - name: web-ui
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: data
              subPath: config
              mountPath: /app/config
            - name: data
              subPath: thumbnails
              mountPath: /app/wwwroot/thumbnails
            - name: data
              subPath: uploads
              mountPath: /app/wwwroot/uploads
            - name: data
              subPath: custom-resources
              mountPath: /app/wwwroot/custom_resources
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wedding-share-nfs-pvc
