apps/applications/home/wedding-share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-share-ui
spec:
  selector:
    app: wedding-share
  ports:
    - name: web-ui
      port: 5000
