apps/applications/home/wedding-share/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wedding-share-route
  namespace: home
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "event.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
      filters: []
