apps/applications/home/wedding-share/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wedding-share-policy
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app: wedding-share

  # Allow Ingress (Inbound)
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: keda
            app.kubernetes.io/component: interceptor
      toPorts:
        - ports:
            - port: "5000"
              protocol: "TCP"
